# dbt-starter-kit

./: .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .ruff.toml  .sqlfluff  .yamllint.yml  CONTRIBUTING.md  README.md  pyproject.toml
.github/: CODEOWNERS  profiles.yml  pull_request_template.md
.github/workflows/: dbt-build.yml  gitleaks.yml  lint.yml  validate-model-metadata.yml
project/: .gitignore  README.md  dbt_project.yml  packages.yml
project/analyses/codegen/: generate_model_yaml.sql
project/macros/: generate_schema_name.sql  generate_schema_name.yml  query_tag.sql  query_tag.yml
project/models/staging/: stg_example_orders.sql  stg_example_orders.yml
project/tests/unit/: stg_example_orders_unit.yml
scripts/: validate_models_yaml.py
