[project]
name = "dbt-starter-kit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dbt-core>=1.11.3",
    "dbt-snowflake>=1.11.1",
    "pydantic>=2.0.0",
    "pyyaml>=6.0.0",
    "yamllint>=1.35.0",
    "sqlfluff>=3.0.0",
    "ruff>=0.6.0",
]
